# visvaultker

./: .env.example  .gitignore  .replit  5y  Admins  App.tsx  Babas  Coding  Connection  Dijon  Djdjdj  Djdjdjdnndnd  Djdjdjnddn  Duck  Eirjdj  Hours  INU  Infant  Jdjdjdjduio  Jinks  Kickoff  LOCAL_SETUP.md  Lucky  MIGRATION_SUMMARY.md  Recondes  SNDP  Udiops  Udixp  Uio  Uiox  Uioy  VULNERABILITY_FIXES.md  design_guidelines.md  fetch_token.py  fix-vulnerabilities.sh  index.html  issues  local.db  metadata.json  new_try  (+8 more)
attached_assets/: Pasted--Introducing-Stagehand-Developers-use-Stagehand-to-reliably-automate-the-web-Stagehand-is--1763462317739_1763462317742.txt  Pasted-3-41-36-PM-express-serving-on-127-0-0-1-5000-WebSocket-client-connected-WebSocket-client-disconn-1763460810641_1763460810641.txt  Pasted-3-46-15-PM-express-serving-on-127-0-0-1-5000-WebSocket-client-connected-WebSocket-client-disconn-1763461028524_1763461028525.txt  Pasted-import-spawn-from-child-process-import-LLMClient-CreateChatCompletionOptions-LLMResponse--1763909447329_1763909447329.txt
client/: index.html  requirements.md
client/src/: App.tsx  index.css
components/: BrowserPreview.tsx  CodeViewer.tsx  ConsoleOutput.tsx
docs/: CUSTOM_LLM_CLIENT.md  OAUTH_INTEGRATION_GUIDE.md  STAGEHAND_GAP_ANALYSIS.md
server/: CustomLLMClient.ts  automation.ts  index.ts  routes.ts  storage.ts
server_py/: airflow_api.py  airflow_routes.py  fetch_token.py  main.py  management.py  models.py  storage.py  utils.py  workflows.py
services/: geminiService.ts
shared/: routes.ts  schema.ts
(+25 files in other folders)
