[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.35",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gitpython>=3.1.46",
    "gunicorn>=24.1.1",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "paramiko>=4.0.0",
    "psycopg2-binary>=2.9.11",
    "pymssql>=2.3.11",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "werkzeug>=3.1.5",
]
